@@ -10,6 +10,9 @@ version 2.5.0 (??/??/2008):
 	  we don't install our SSL CA certs, so it's important that the
 	  libpurple package depend on the CA certificates.
 
+	IRC:
+	* /ctcp command (Vladislav Guberinić)
+
 	MSN:
 	* Update MSN support to protocol 15 (Elliott Sales de Andrade, Jorge
 	  Villaseñor, Mike Ruprecht, Carlos Silva, Ma Yuan, Daniel Ljungborg
